objects/EVL_DMS_List_Of_Value__mdt.object
<CustomObject>
    <fields>
        <fullName>Controlled_BY_LOV_Code__c</fullName>
        <label>Controlled BY LOV Code</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOV_Code__c</fullName>
        <label>LOV Code</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOV_Description__c</fullName>
        <label>LOV Description</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOV_Type__c</fullName>
        <description>Picklist Fields names</description>
        <label>LOV Type</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <label>EVL DMS List Of Value</label>
    <pluralLabel>EVL DMS List Of Value</pluralLabel>
</CustomObject>